--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon ./api/index.js",
+    "dev": "nodemon ./api/index.js",
     "start": "node ./api/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^3.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "mongoose-skip-empty": "^1.0.0",
+    "uuid": "^9.0.1"
   },
   "keywords": [],
   "description": "",
