add atlas database cluster

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/asia_travel
+MONGO_URI=mongodb+srv://shohjahon:1@cluster0.qm5mkpn.mongodb.net/asia_travel
 PORT=5000
